modify first html file

--- a/first.html
+++ b/first.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
+<title>The Best Room</title>
+<meta name = "keywords" content="chairs, tables, television">
+<meta encoding ="utf-8">
 </head>
 <body>
-<p>
-    Welcome to my room.
-</p>
-<p>Kindly feel free to enter. You are always welcome!</p>
+<hgroup>
+    <h1>The best room ever</h1>
+    <i><h5>Helping you organise your room</h5></i>
+</hgroup>
+<h2>Come see our room best room ever</h2>
 <p>Located at:</p>
 <p>street 23, Kampala<br> Wilson Street<br>
-We are ever around 24/7</p>
+We are ever around 24/7,<i><b>Again Come!</b></i> </p><sup>1</sup> 
+
+<p><sup>1</sup>Closed the 1<sup>st</sup>Saturday in January</p> <!--sup is a super script -->
+
+
+
+
 
 </body>
 </html>
