modify first html file

--- a/first.html
+++ b/first.html
@@ -13,11 +13,15 @@
 <h2>Come see our room best room ever</h2>
 <p>Located at:</p>
 <p>street 23, Kampala<br> Wilson Street<br>
-We are ever around 24/7,<i><b>Again Come!</b></i> </p><sup>1</sup> 
+We are ever around 24/7,<i><b>Again Come!</b></i> </p>
 
 <p><sup>1</sup>Closed the 1<sup>st</sup>Saturday in January</p> <!--sup is a super script -->
 
-
+<!--Using Monospace and Preformatted Text-->
+<p>1. Click in the Login box<br>
+2.Type <kbd>Premium</kbd><br> <!--Premium and Customer are Monospace-->
+3.Click in the password box<br>
+4.Type <kbd>Customer</kbd></p>
 
 
 
