editing poemtext file

--- a/poemtext.html
+++ b/poemtext.html
@@ -18,6 +18,16 @@
     aooffjoaoinaaojieuaiaaja!
     </pre>
 
+    <h4>Brief Biography from answers.com:</h4> 
+    <blockquote cite = "https://www.answers.com/topic/diana-nakiwala">
+    <p>eddojdbddndkjdjdjdjnajdbadajdbadbadabjdbadnb
+        djdjdnjdnjjdjdjddjjdjjdddjdjdjdjdjdjdjdjjj
+        ndjjdjdjdjdddddddddddjdodiwoidiojoddodododo
+        dddidnojiejnfffkfnjnajanjakfkfkfffkfjffjfj
+        fnfjeeoeimwpnakkdojnfkanfjnfanfjfnfjfnjfnj
+        ffjfjfnjieeowjwjnw ddnn nnjjnjfjfnfjfjjfjfj
+    </p></blockquote>
+
 
 
 </body>
