Editing lists and backgrounds file

--- a/listsandbackgrounds.html
+++ b/listsandbackgrounds.html
@@ -38,6 +38,9 @@
             <li>Saturday: Washing Vehicle</li>
         </ol>
 
+        <p>Copyright &copy; 2018 The Home Company&trade;<br> <!--&copy means @ and &trade means Trade mark-->
+        No work should be done without permission</p>
+
     </body>
 
 
