--- a/specifying_backgroundimage.html
+++ b/specifying_backgroundimage.html
@@ -6,8 +6,15 @@
 <meta encoding ="utf-8">
 </head>
 <body>
-    <body style = "background-image: url(airways.jpg)">
+        <!--<body style="background-image: url(airways.jpg); color: green; background-color:
+        beige"> the body can hold can hold many style specifications in a single atyle-->
+
+    <!--<body style = "background-image: url(airways.jpg)">--> <!--By default: displays repeat patterns image-->
+
+    <body style="background-image: url(airways.jpg); background-color: beige; background-repeat: no-repeat">
     <body style ="color: green; background-color: beige">
+
+    
     <!--Applying background color-->
     <!--<body style ="background-color: #FFFF00"> -->
     <!--<body style ="background-color: rgb(255, 255, 0)"> u can use both methods-->
